--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,9 +18,11 @@ dependencies:
   grpc: ^2.0.0+1
   rxdart: ^0.22.1+1
   provider: ^3.0.0+1
+  http: ^0.12.0+2
 
   # UI
   timeago: ^2.0.18
+  url_launcher: ^5.1.2
 
 dev_dependencies:
   flutter_test:
