--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
 
   # UI
   timeago: ^2.0.18
+  outline_material_icons: ^0.1.0
 
 dev_dependencies:
   flutter_test:
@@ -29,3 +30,8 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  
+  fonts:
+  - family:  HpiIcons
+    fonts:
+      - asset: fonts/HpiIcons.ttf
