--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
 
   # General
   kt_dart: ^0.6.2
+  url_launcher: ^5.1.2
 
   # Data
   protobuf: ^0.13.15
@@ -20,6 +21,7 @@ dependencies:
   provider: ^3.0.0+1
 
   # UI
+  flutter_html: ^0.10.4
   timeago: ^2.0.18
 
 dev_dependencies:
