--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,8 +21,10 @@ dependencies:
   http: ^0.12.0+2
 
   # UI
+  intl: ^0.15.8
   timeago: ^2.0.18
   url_launcher: ^5.1.2
+  align_positioned: ^1.0.8
 
 dev_dependencies:
   flutter_test:
