--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   timeago: ^2.0.18
   url_launcher: ^5.1.2
   align_positioned: ^1.0.8
+  cached_network_image: ^1.1.1
 
 dev_dependencies:
   flutter_test:
