--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  flutter_launcher_icons: ^0.7.2+1
+
 
 flutter:
   uses-material-design: true
@@ -41,3 +43,10 @@ flutter:
   - family:  HpiIcons
     fonts:
       - asset: fonts/HpiIcons.ttf
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/icon/icon.png"
+  adaptive_icon_background: "#ffffff"
+  adaptive_icon_foreground: "assets/icon/foreground.png"
