--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,10 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-  
+
+  assets:
+    - assets/logo/logo_text.png
+
   fonts:
   - family:  HpiIcons
     fonts:
