ui(app): fix app icon cropping

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,6 @@ flutter:
 flutter_icons:
   android: true
   ios: true
-  image_path: "assets/icon/icon.png"
+  image_path: "assets/logo/icon.png"
   adaptive_icon_background: "#ffffff"
-  adaptive_icon_foreground: "assets/icon/foreground.png"
+  adaptive_icon_foreground: "assets/logo/foreground.png"
