--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
 
   # General
   kt_dart: ^0.6.2
+  flutter_localizations:
+    sdk: flutter
 
   # Data
   protobuf: ^0.13.15
@@ -19,6 +21,7 @@ dependencies:
   rxdart: ^0.22.1+1
   provider: ^3.0.0+1
   http: ^0.12.0+2
+  yaml: ^2.1.16
 
   # UI
   intl: ^0.15.8
@@ -42,6 +45,8 @@ flutter:
 
   assets:
     - assets/logo/logo_text.png
+    - assets/localizations/strings_de.yaml
+    - assets/localizations/strings_en.yaml
 
   fonts:
   - family:  HpiIcons
