--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   fluttery: ^0.0.8
   align_positioned: ^1.0.8
   cached_network_image: ^1.1.1
+  screenshot: ^0.1.1
 
 dev_dependencies:
   flutter_test:
