feat: support L11n String formatting, change API

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   intl: ^0.15.8
+  sprintf: ^4.0.2
   flutter_html: ^0.10.4
   timeago: ^2.0.18
   outline_material_icons: ^0.1.0
