--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,7 @@ dependencies:
   # UI
   flutter_localizations:
     sdk: flutter
-  intl: ^0.15.8
+  intl: ^0.16.0
   sprintf: ^4.0.2
   flutter_html: ^0.10.4
   timeago: ^2.0.18
@@ -34,6 +34,7 @@ dependencies:
   align_positioned: ^1.0.8
   cached_network_image: ^1.1.1
   screenshot: ^0.1.1
+  flutter_ringtone_player: ^1.0.3
 
 dev_dependencies:
   flutter_test:
