--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ flutter:
   uses-material-design: true
 
   assets:
+    - assets/logo/logo.png
     - assets/logo/logo_text.png
     - assets/logo/mobileDev sheep.png
     - assets/localizations/strings_de.yaml
