--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,8 +14,8 @@ dependencies:
   kt_dart: ^0.6.2
 
   # Data
-  protobuf: ^0.13.15
-  grpc: ^2.0.0+1
+  protobuf: ^1.0.0
+  grpc: ^2.1.2
   rxdart: ^0.22.1+1
   provider: ^3.0.0+1
   http: ^0.12.0+2
@@ -39,6 +39,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  build_runner: ^1.0.0
 
   flutter_launcher_icons: ^0.7.2+1
 
