feat(app, myhpi): show cover in InfoBitPage

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
 
   # Data
   protobuf: ^1.0.0
+  immutable_proto: ^0.0.4
   grpc: ^2.1.2
   rxdart: ^0.22.1+1
   provider: ^3.0.0+1
@@ -40,6 +41,7 @@ dev_dependencies:
     sdk: flutter
 
   build_runner: ^1.0.0
+  immutable_proto_generator: ^0.0.4
 
   flutter_launcher_icons: ^0.7.2+1
 
