--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,10 +12,16 @@ dependencies:
 
   # General
   kt_dart: ^0.6.2
+  analyzer: 0.38.2 # Not needed directly, for details see https://github.com/dart-lang/sdk/issues/38499
 
   # Data
   protobuf: ^0.13.15
   grpc: ^2.0.0+1
+  repository: ^1.0.4
+  repository_hive: ^1.0.4
+  cached_listview: ^1.1.0
+  hive: ^1.0.0
+  path_provider: ^1.3.0
   rxdart: ^0.22.1+1
   provider: ^3.0.0+1
   http: ^0.12.0+2
@@ -40,7 +46,8 @@ dev_dependencies:
     sdk: flutter
 
   flutter_launcher_icons: ^0.7.2+1
-
+  hive_generator: ^0.5.2
+  build_runner: ^1.7.1
 
 flutter:
   uses-material-design: true
@@ -51,9 +58,9 @@ flutter:
     - assets/localizations/strings_en.yaml
 
   fonts:
-  - family:  HpiIcons
-    fonts:
-      - asset: fonts/HpiIcons.ttf
+    - family: HpiIcons
+      fonts:
+        - asset: fonts/HpiIcons.ttf
 
 flutter_icons:
   android: true
