--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   kt_dart: ^0.6.2
 
   # Data
+  path_provider: ^1.3.0
   protobuf: ^1.0.0
   immutable_proto: ^0.0.4
   grpc: ^2.1.2
@@ -47,7 +48,6 @@ dev_dependencies:
 
   flutter_launcher_icons: ^0.7.2+1
 
-
 flutter:
   uses-material-design: true
 
@@ -60,9 +60,9 @@ flutter:
     - assets/privacyPolicy.md
 
   fonts:
-  - family:  HpiIcons
-    fonts:
-      - asset: fonts/HpiIcons.ttf
+    - family: HpiIcons
+      fonts:
+        - asset: fonts/HpiIcons.ttf
 
 flutter_icons:
   android: true
