feat(crashreporting): send crash reports to server

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,11 +22,12 @@ dependencies:
   http: ^0.12.0+2
   yaml: ^2.1.16
   package_info: ^0.4.0+6
+  device_info: ^0.4.0+3
 
   # UI
   flutter_localizations:
     sdk: flutter
-  intl: ^0.15.8
+  intl: ^0.16.0
   sprintf: ^4.0.2
   flutter_html: ^0.10.4
   timeago: ^2.0.18
