--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   shared_preferences: ^0.5.3+4
   package_info: ^0.4.0+6
   device_info: ^0.4.0+3
+  share: ^0.6.2+3
 
   # UI
   flutter_localizations:
