--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,37 +1,12 @@
 name: Build
 
-on: [push, pull_request]
-
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v1
-    - uses: actions/setup-java@v1
-      with:
-        java-version: '12.x'
-    - name: Install Flutter (stable)
-      uses: subosito/flutter-action@v1
-      with:
-        channel: 'stable'
-    - name: Install dependencies
-      run: flutter pub get
-
-    - name: Create temp dir
-      run: mkdir ./temp
-    - name: Download HPI Cloud APIs
-      uses: Legion2/download-release-action@v2.1.0
-      with:
-        repository: HPI-de/hpi-cloud-apis
-        tag: '0.0.11'
-        path: ./temp
-        file: generated-dart.zip
-    - name: Unzip HPI Cloud APIs
-      run: unzip ./temp/generated-dart.zip -d ./lib
-
-    - name: Run code generator(s)
-      run: flutter pub run build_runner build
+    - name: Setup
+      uses: ./setup.yml
 
     - name: Build apk
       run: flutter build apk
