--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -12,10 +12,10 @@ jobs:
       with:
         java-version: '12.x'
 
-    - name: Install Flutter (stable)
+    - name: Install Flutter (beta)
       uses: subosito/flutter-action@v1
       with:
-        flutter-version: '1.9.1+hotfix.4'
+        flutter-version: '1.10.7'
     - name: Install dependencies
       run: flutter pub get
 
