--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -17,6 +17,7 @@ jobs:
     - name: Install Flutter (beta)
       uses: subosito/flutter-action@v1
       with:
+        channel: 'beta'
         flutter-version: '1.10.7'
     - name: Install dependencies
       run: flutter pub get
