--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -41,6 +41,7 @@ jobs:
 
     - name: Run linter
       run: flutter analyze --write=./flutter_analyze_report.txt
+      continue-on-error: true
 
     - uses: actions/setup-ruby@v1
       if: github.event_name == 'pull_request'
