--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -3,7 +3,7 @@ name: Lint
 on: [push, pull_request]
 
 jobs:
-  build:
+  lint:
     runs-on: ubuntu-latest
 
     steps:
@@ -43,6 +43,11 @@ jobs:
       run: flutter analyze --write=./flutter_analyze_report.txt
       continue-on-error: true
 
+  report-lint:
+    needs: lint
+    runs-on: ubuntu-latest
+
+    steps:
     - uses: actions/setup-ruby@v1
       if: github.event_name == 'pull_request'
       with:
