--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -43,12 +43,8 @@ jobs:
       run: flutter analyze --write=./flutter_analyze_report.txt
       continue-on-error: true
 
-  report-lint:
-    needs: lint
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/setup-ruby@v1
+    - name: Install ruby for danger
+      uses: actions/setup-ruby@v1
       if: github.event_name == 'pull_request'
       with:
         ruby-version: '2.6'
