--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -7,9 +7,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: srvaroa/labeler@master
+      with:
+        repo-token: '${{ secrets.GITHUB_TOKEN }}'
 
   assign-author:
     runs-on: ubuntu-latest
     steps:
-      - uses: samspills/assign-pr-to-author@v1.0
-        if: github.event_name == 'pull_request' && github.event.action == 'opened'
+    - uses: samspills/assign-pr-to-author@v1.0
+      if: github.event_name == 'pull_request' && github.event.action == 'opened'
+      with:
+        repo-token: '${{ secrets.GITHUB_TOKEN }}'
