--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -48,6 +48,7 @@ jobs:
       if: github.event_name == 'pull_request'
       with:
         ruby-version: '2.6'
+    - run: bundle update --bundler
     - name: Run danger on generated report
       uses: MeilCli/danger-action@v1
       if: github.event_name == 'pull_request'
