--- a/.github/workflows/pr_title_lint.yml
+++ b/.github/workflows/pr_title_lint.yml
@@ -9,6 +9,4 @@ jobs:
     steps:
     - uses: seferov/pr-lint-action@master
       with:
-        title-regex: >-
-          ^\\s*(?<type>build|chore|ci|docs|feat|fix|refactor)(?:\\((?<scopes>(?:\\w|(?<=\\w)/(?=\\w))+?(?:,\\s*(?:\\w|(?<=\\w)/(?=\\w))+?)*?)\\))?:\\s*
-          (?<description>.*?)\\s*\$
+        title-regex: '^(?<type>build|chore|ci|docs|feat|fix|refactor)(?:\((?<scopes>(?:\w|(?<=\w)\/(?=\w))+?(?:,\s*(?:\w|(?<=\w)\/(?=\w))+?)*?)\))?: \s*(?<description>.*?)\s*$'
