--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -4,16 +4,26 @@ on: [pull_request]
 
 jobs:
   add-type-labels:
+    name: Add type labels
     runs-on: ubuntu-latest
     steps:
     - uses: srvaroa/labeler@master
       with:
-        repo-token: '${{ secrets.GITHUB_TOKEN }}'
+        GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
 
   assign-author:
+    name: Assign author
     runs-on: ubuntu-latest
     steps:
     - uses: samspills/assign-pr-to-author@v1.0
       if: github.event_name == 'pull_request' && github.event.action == 'opened'
       with:
         repo-token: '${{ secrets.GITHUB_TOKEN }}'
+
+  title-lint:
+    name: Validate PR title
+    runs-on: ubuntu-latest
+    steps:
+    - uses: seferov/pr-lint-action@master
+      with:
+        title-regex: '^(?<type>build|chore|ci|docs|feat|fix|refactor)(?:\((?<scopes>(?:\w|(?<=\w)\/(?=\w))+?(?:,\s*(?:\w|(?<=\w)\/(?=\w))+?)*?)\))?: \s*(?<description>.*?)\s*$'
