--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,7 +39,8 @@ jobs:
     - name: Run code generator(s)
       run: flutter pub run build_runner build
 
-  build:
+  build-apk:
+    name: Build APK
     needs: install
     runs-on: ubuntu-latest
     steps:
@@ -47,6 +48,7 @@ jobs:
       run: flutter build apk
 
   lint:
+    name: Lint
     needs: install
     runs-on: ubuntu-latest
     steps:
@@ -59,9 +61,9 @@ jobs:
       if: github.event_name == 'pull_request'
       with:
         ruby-version: '2.6'
-    - run: |
-        gem install bundler
-        bundle install --without documentation
+    - run: gem install bundler
+    - run: ls
+    - run: bundle install --without documentation
     - name: Run danger on generated report
       uses: MeilCli/danger-action@v1
       if: github.event_name == 'pull_request'
