--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,10 +1,10 @@
-name: Build
+name: Lint
 
 on: [push, pull_request]
 
 jobs:
-  build:
-    name: Build
+  lint:
+    name: lint
     runs-on: ubuntu-latest
     steps:
     - name: Checkout repository
@@ -39,5 +39,21 @@ jobs:
     - name: Run code generator(s)
       run: flutter pub run build_runner build
 
-    - name: Build apk
-      run: flutter build apk
+    - name: Run linter
+      run: flutter analyze --write=./flutter_analyze_report.txt
+      continue-on-error: true
+
+    - name: Install ruby
+      uses: actions/setup-ruby@v1
+      if: github.event_name == 'pull_request'
+      with:
+        ruby-version: '2.6'
+    - run: gem install bundler
+    - run: ls
+    - run: bundle install --without documentation
+    - name: Run danger on generated report
+      uses: MeilCli/danger-action@v1
+      if: github.event_name == 'pull_request'
+      with:
+        danger_file: Dangerfile
+        danger_id: 'danger-pr'
