--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -4,7 +4,7 @@ on: [push, pull_request]
 
 jobs:
   lint:
-    name: lint
+    name: Lint
     runs-on: ubuntu-latest
     steps:
     - name: Checkout repository
@@ -48,12 +48,14 @@ jobs:
       if: github.event_name == 'pull_request'
       with:
         ruby-version: '2.6'
-    - run: gem install bundler
-    - run: ls
-    - run: bundle install --without documentation
+    - run: |
+        gem install bundler
+        bundle install --without documentation
     - name: Run danger on generated report
       uses: MeilCli/danger-action@v1
       if: github.event_name == 'pull_request'
       with:
         danger_file: Dangerfile
         danger_id: 'danger-pr'
+      env:
+        DANGER_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
