--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -8,8 +8,19 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: srvaroa/labeler@master
+      with:
+        config_path: ./github/type-labels.yml
       env:
         GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
+
+  add-component-labels:
+    name: Add component labels
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/labeler@v2
+      with:
+        configuration-path: ./github/component-labels.yml
+        repo-token: "${{ secrets.GITHUB_TOKEN }}"
 
   assign-author:
     name: Assign author
