fix(chore): fix build

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -54,6 +54,14 @@ android {
     }
     packagingOptions {
         exclude 'META-INF/proguard/coroutines.pro'
+        
+        // If you run into the following issue: "More than one file was found
+        // with OS independent path
+        // 'META-INF/proguard/androidx-annotations.pro'", please put the
+        // following in your gradle file as a temporary workaround while we fix
+        // the issue in alpha10.
+        // ~ https://developer.android.com/jetpack/androidx/releases/archive/arch
+        exclude 'META-INF/proguard/androidx-annotations.pro'
     }
 }
 
