--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@
 **/doc/api/
 .dart_tool/
 .flutter-plugins
+.flutter-plugins-dependencies
 .packages
 .pub-cache/
 .pub/
@@ -33,6 +34,8 @@
 *.g.dart
 
 # Android related
+.gradle
+local.properties
 **/android/**/gradle-wrapper.jar
 **/android/.gradle
 **/android/captures/
