--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,9 +22,9 @@ dependencies:
   provider: ^3.0.0+1
   http: ^0.12.0+2
   yaml: ^2.1.16
-  shared_preferences: ^0.5.3+4
+  shared_preferences: ^0.5.6
   package_info: ^0.4.0+6
-  device_info: ^0.4.0+3
+  device_info: ^0.4.1+4
 
   # UI
   flutter_localizations:
@@ -36,7 +36,7 @@ dependencies:
   outline_material_icons: ^0.1.0
   url_launcher: ^5.1.2
   align_positioned: ^1.0.8
-  cached_network_image: ^1.1.1
+  cached_network_image: ^2.0.0
   screenshot: ^0.1.1
   flutter_ringtone_player: ^1.0.3
   flutter_pagewise: ^1.2.3
