--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,28 +1,28 @@
-name: Build
+name: Build & Lint
 
 on:
   push:
   pull_request:
   schedule:
-  - cron: '0 6,14,22 * * *'
+    - cron: "0 8 * * *"
 
 jobs:
   build:
-    name: Build
+    name: Install Flutter and dependencies
     runs-on: ubuntu-latest
     steps:
     - name: Checkout repository
       uses: actions/checkout@v1
+
     - name: Install Java
       uses: actions/setup-java@v1
       with:
         java-version: '12.x'
-
     - name: Install Flutter (beta)
       uses: subosito/flutter-action@v1
       with:
-        channel: 'beta'
-        flutter-version: '1.10.7'
+        channel: "stable" # or: 'dev' or 'beta'
+
     - name: Install dependencies
       run: flutter pub get
 
@@ -42,6 +42,83 @@ jobs:
 
     - name: Run code generator(s)
       run: flutter pub run build_runner build
+      
+    - name: Remove obsolete files
+      run: |
+        rm -rf ./.dart_tool/pub/bin/build_runner
+    - name: Persist current state
+      uses: actions/upload-artifact@v1
+      with:
+        name: source
+        path: .
 
-    - name: Build apk
-      run: flutter build apk
+  lint:
+    name: Lint
+    needs: install
+    runs-on: ubuntu-latest
+    steps:
+      - name: Install Java
+        uses: actions/setup-java@v1
+        with:
+          java-version: "12.x"
+      - name: Install Flutter (stable)
+        uses: subosito/flutter-action@v1
+        with:
+          channel: "stable"
+
+      - name: Checkout source
+        uses: actions/download-artifact@v1
+        with:
+          name: source
+          path: .
+
+      - name: Run linter
+        run: flutter analyze > flutter_analyze_report.txt
+        continue-on-error: true
+
+      - name: Install ruby
+        uses: actions/setup-ruby@v1
+        if: github.event_name == 'pull_request'
+        with:
+          ruby-version: "2.6"
+      - name: Install ruby gems
+        run: |
+          gem install bundler
+          bundle install --without documentation
+        if: github.event_name == 'pull_request'
+      - name: Run danger on generated report
+        uses: MeilCli/danger-action@v1
+        if: github.event_name == 'pull_request'
+        with:
+          danger_file: Dangerfile
+          danger_id: "danger-pr"
+        env:
+          DANGER_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  build:
+    name: Build
+    needs: install
+    runs-on: ubuntu-latest
+    steps:
+      - name: Install Java
+        uses: actions/setup-java@v1
+        with:
+          java-version: "12.x"
+      - name: Install Flutter (stable)
+        uses: subosito/flutter-action@v1
+        with:
+          channel: "stable"
+
+      - name: Checkout source
+        uses: actions/download-artifact@v1
+        with:
+          name: source
+          path: .
+
+      - run: flutter build apk --release
+
+      - name: Upload APK as artifact
+        uses: actions/upload-artifact@v1
+        with:
+          name: apk
+          path: build/app/outputs/apk/sc/release
