--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ on:
     - cron: "0 8 * * *"
 
 jobs:
-  build:
+  install:
     name: Install Flutter and dependencies
     runs-on: ubuntu-latest
     steps:
