--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   # Data
   flutter_cached: ^3.0.1
   hive: ^1.1.1
+  hive_flutter: ^0.3.0+1
   path_provider: ^1.3.0
   immutable_proto: ^0.0.4
   grpc: ^2.1.2
