--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: The official HPI app, written in Flutter.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.2.2 <3.0.0"
+  sdk: ">=2.6.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -36,6 +36,7 @@ dependencies:
   share: ^0.6.2+3
   shared_preferences: ^0.5.6
   sprintf: ^4.0.2
+  time_machine: ^0.9.12
   timeago: ^2.0.18
   url_launcher: ^5.1.2
   yaml: ^2.1.16
