--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -37,4 +37,4 @@ jobs:
     steps:
     - uses: seferov/pr-lint-action@master
       with:
-        title-regex: '^(?<type>build|chore|ci|docs|feat|fix|refactor)(?:\((?<scopes>(?:\w|(?<=\w)\/(?=\w))+?(?:,\s*(?:\w|(?<=\w)\/(?=\w))+?)*?)\))?: \s*(?<description>.*?)\s*$'
+        title-regex: '^(?<type>build|change|chore|ci|docs|feat|fix|refactor)(?:\((?<scopes>(?:\w|(?<=\w)\/(?=\w))+?(?:,\s*(?:\w|(?<=\w)\/(?=\w))+?)*?)\))?: \s*(?<description>.*?)\s*$'
