--- a/.gitignore
+++ b/.gitignore
@@ -11,18 +11,13 @@
 .history
 .svn/
 
-# IntelliJ related
+# IntelliJ
 *.iml
 *.ipr
 *.iws
 .idea/
 
-# The .vscode folder contains launch configuration and tasks you configure in
-# VS Code which you may wish to be included in version control, so this line
-# is commented out by default.
-#.vscode/
-
-# Flutter/Dart/Pub related
+# Flutter/Dart/Pub
 **/doc/api/
 .dart_tool/
 .flutter-plugins
@@ -31,9 +26,13 @@
 .pub-cache/
 .pub/
 /build/
-*.g.dart
+!/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
 
-# Android related
+# Generated dart files
+*.g.dart
+lib/generated/**
+
+# Android
 .gradle
 local.properties
 **/android/**/gradle-wrapper.jar
@@ -44,7 +43,7 @@ local.properties
 **/android/local.properties
 **/android/**/GeneratedPluginRegistrant.java
 
-# iOS/XCode related
+# iOS/XCode
 **/ios/**/*.mode1v3
 **/ios/**/*.mode2v3
 **/ios/**/*.moved-aside
@@ -70,10 +69,7 @@ local.properties
 **/ios/Flutter/flutter_export_environment.sh
 **/ios/ServiceDefinitions.json
 **/ios/Runner/GeneratedPluginRegistrant.*
-
-# Exceptions to above rules.
 !**/ios/**/default.mode1v3
 !**/ios/**/default.mode2v3
 !**/ios/**/default.pbxuser
 !**/ios/**/default.perspectivev3
-!/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
