--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -2,10 +2,12 @@ include: package:pedantic/analysis_options.yaml
 
 analyzer:
   exclude:
-    - lib/core/hpi_icons.dart
-    - lib/hpi_cloud_apis/**
-    - lib/**/*.g.dart
+    - build/**
     - lib/**/*.pb.dart
+    - lib/**/*.g.dart
+    - lib/core/hpi_icons.dart
+    - lib/generated/**
+    - lib/hpi_cloud_apis/**
   strong-mode:
     implicit-casts: false
 
