--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -120,7 +120,7 @@ jobs:
       - run: flutter build apk --release
 
       - name: Upload APK as artifact
-        uses: actions/upload-artifact@v1
+        uses: actions/upload-artifact@v2-preview
         with:
           name: apk
-          path: build/app/outputs/apk/release
+          path: build/app/outputs/apk/release/app-release.apk
