--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dev_dependencies:
   build_runner: ^1.0.0
   flutter_launcher_icons: ^0.7.2+1
   immutable_proto_generator: ^0.0.4
+  intl_utils: ^1.2.2
 
 flutter:
   uses-material-design: true
