--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,8 +25,9 @@ dependencies:
   get_it: ^4.0.1
   grpc: ^2.1.2
   http: ^0.12.0+2
-  immutable_proto: ^0.0.4
+  immutable_proto: ^0.1.0
   intl: ">=0.15.8 <0.17.0"
+  kt_dart: ^0.7.0+1
   outline_material_icons: ^0.1.0
   package_info: ^0.4.0+6
   path_provider: ^1.3.0
@@ -48,7 +49,7 @@ dev_dependencies:
 
   build_runner: ^1.0.0
   flutter_launcher_icons: ^0.7.2+1
-  immutable_proto_generator: ^0.0.4
+  immutable_proto_generator: ^0.1.0
   intl_utils: ^1.2.2
 
 flutter:
