--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   characters: ^0.3.0
   dartx: ^0.2.0
   device_info: ^0.4.1+4
+  enum_to_string: ^1.0.9
   flutter_deep_linking: ^0.1.1
   flutter_html: ^0.10.4
   flutter_localizations:
