--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Install Flutter (beta)
         uses: subosito/flutter-action@v1
         with:
-          flutter-version: v1.12.13+hotfix.9
+          flutter-version: 1.12.13+hotfix.9
 
       - name: Install dependencies
         run: flutter pub get
@@ -66,7 +66,7 @@ jobs:
       - name: Install Flutter (stable)
         uses: subosito/flutter-action@v1
         with:
-          flutter-version: v1.12.13+hotfix.9
+          flutter-version: 1.12.13+hotfix.9
 
       - name: Checkout source
         uses: actions/download-artifact@v1
@@ -109,7 +109,7 @@ jobs:
       - name: Install Flutter (stable)
         uses: subosito/flutter-action@v1
         with:
-          flutter-version: v1.12.13+hotfix.9
+          flutter-version: 1.12.13+hotfix.9
 
       - name: Checkout source
         uses: actions/download-artifact@v1
