--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,12 @@ on:
   push:
   pull_request:
   schedule:
-    - cron: "0 8 * * *"
+    - cron: "0 4 * * *"
+
+env:
+  JAVA_VERSION: 12.x
+  FLUTTER_CHANNEL: stable
+  FLUTTER_VERSION: 1.17.x
 
 jobs:
   install:
@@ -17,11 +22,12 @@ jobs:
       - name: Install Java
         uses: actions/setup-java@v1
         with:
-          java-version: "12.x"
-      - name: Install Flutter (beta)
+          java-version: ${{ env.JAVA_VERSION }}
+      - name: Install Flutter (stable)
         uses: subosito/flutter-action@v1
         with:
-          flutter-version: 1.12.13+hotfix.9
+          channel: ${{ env.FLUTTER_CHANNEL }}
+          version: ${{ env.FLUTTER_VERSION }}
 
       - name: Install dependencies
         run: flutter pub get
@@ -62,17 +68,21 @@ jobs:
       - name: Install Java
         uses: actions/setup-java@v1
         with:
-          java-version: "12.x"
+          java-version: ${{ env.JAVA_VERSION }}
       - name: Install Flutter (stable)
         uses: subosito/flutter-action@v1
         with:
-          flutter-version: 1.12.13+hotfix.9
+          channel: ${{ env.FLUTTER_CHANNEL }}
+          version: ${{ env.FLUTTER_VERSION }}
 
       - name: Checkout source
         uses: actions/download-artifact@v1
         with:
           name: source
           path: .
+
+      - name: Install dependencies
+        run: flutter pub get
 
       - name: Run linter
         run: flutter analyze > flutter_analyze_report.txt
@@ -105,11 +115,12 @@ jobs:
       - name: Install Java
         uses: actions/setup-java@v1
         with:
-          java-version: "12.x"
+          java-version: ${{ env.JAVA_VERSION }}
       - name: Install Flutter (stable)
         uses: subosito/flutter-action@v1
         with:
-          flutter-version: 1.12.13+hotfix.9
+          channel: ${{ env.FLUTTER_CHANNEL }}
+          version: ${{ env.FLUTTER_VERSION }}
 
       - name: Checkout source
         uses: actions/download-artifact@v1
@@ -117,10 +128,13 @@ jobs:
           name: source
           path: .
 
+      - name: Install dependencies
+        run: flutter pub get
+
       - run: flutter build apk --release
 
       - name: Upload APK as artifact
-        uses: actions/upload-artifact@v2-preview
+        uses: actions/upload-artifact@v2
         with:
           name: apk
           path: build/app/outputs/apk/release/app-release.apk
